new line is added in index.html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  I am forking the project and will be creating the pull request for practice
 </p>
 
 </body>
