--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
-  <!-- This is Leela testing Git -->
+  <!-- This is a test by Leela -->
+
 
 </p>
 
