Leela: added comment in index.html on leela-update branch

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   Fork me? Fork you, @octocat!
   <!-- This is a test by Leela -->
 <!-- hello leela -->
+<!-- Leela testing feature branch -->
 
 </p>
 
