--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<h1>Welcome to Spoon-Knife - Version Two</h1>
+<p>This is the updated version of the Spoon-Knife project.</p>
 <p>
   Fork me? Fork you, @octocat!
 </p>
