--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<!-- Edited by John-Merson Gumapo - Fork Test -->
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
