Hare Krishna Hare Krishna Krishna Krishna Hare Hare from Branch B2

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Hare Krishna From Branch B 🙏
-  With Additional Changes 
+  Hare krishna Hare Krihsn Krishna krishna Hare Hare 
+  Hare Rama Hare Rama Rama Rama Hare Hare 
+  from Branch B2
 </p>
 
 </body>
