Again Hare ka Naam Hari Bol from Brnanch C

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Hare Krishna From Branch C 🙏!
+  Hare Krishna From Branch C 🙏
+  Hare Krishna Hare Krishna Krishan Krishan Hare Hare 
+  Hare Rama Hare Rama RAma Rama Hare Hare !
 </p>
 
 </body>
