Making changes after pushing and again experimenting

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   Hare Krishna From Branch C 🙏
   Hare Krishna Hare Krishna Krishan Krishan Hare Hare 
   Hare Rama Hare Rama RAma Rama Hare Hare !
+  Making Changes After pushing and then again pushing 
+  Hare Krishan Again 
 </p>
 
 </body>
